# headturner-hat

./: .gitignore  CMakeLists.txt  PUBLISHING.md  README.md  index.html  script.js  styles.css
.github/workflows/: build-installers.yml
JUCE/modules/juce_audio_formats/: juce_audio_formats.cpp  juce_audio_formats.h
JUCE/modules/juce_audio_formats/format/: juce_AudioFormatManager.cpp
JUCE/modules/juce_core/native/: juce_SystemStats_windows.cpp
JUCE/modules/juce_core/system/: juce_TargetPlatform.h
JUCE/modules/juce_graphics/image_formats/: juce_JPEGLoader.cpp
JUCE/modules/juce_graphics/native/: juce_Direct2DImage_windows.cpp
JUCE/modules/juce_gui_basics/: juce_gui_basics.cpp
JUCE/modules/juce_gui_basics/native/: juce_Windowing_windows.cpp
packaging/: RELEASE_NOTES.txt
packaging/windows/: HeadturnerHat.iss  README.txt
scripts/: package-macos.sh  package-windows.ps1
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
